# polystore

./: .gitignore  CMakeLists.txt  LICENSE  README.md  polystore_debug
data/: database
docs/: DOCS.md  TUTORIAL.md
include/: database.h  httplib.h
src/: database.cpp  main.cpp
tests/: README.md  main.py  pyproject.toml
